# ChangeLog for app-text/ggv
# Copyright 2002-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-text/ggv/ChangeLog,v 1.50 2004/02/10 06:30:45 darkspecter Exp $

  10 Feb 2004; Bartosch Pixa <darkspecter@gentoo.org> ggv-2.4.1.ebuild:
  set ppc in keywords

*ggv-2.4.1 (08 Feb 2004)

  08 Feb 2004; <spider@gentoo.org> ggv-2.4.1.ebuild:
  x86 stable

  14 Jan 2004; Jon Portnoy <avenj@gentoo.org> ggv-2.4.0.2.ebuild :
  Stable on AMD64.

  09 Jan 2004; <gustavoz@gentoo.org> ggv-2.4.0.2.ebuild:
  marked stable on sparc

  13 Dec 2003; Guy Martin <gmsoft@gentoo.org> ggv-2.4.0.2.ebuild:
  Marked stable on hppa.

  09 Dec 2003; Heinrich Wendel <lanius@gentoo.org> ggv-2.0.0.ebuild,
  ggv-2.0.1.ebuild, ggv-2.4.0.1.ebuild, ggv-2.4.0.2.ebuild:
  changed app-text/ghostscript to virtual/ghostscript

  20 Nov 2003; foser <foser@gentoo.org> ggv-2.4.0.2.ebuild :
  Add gnome-vfs dep (#28716)

  14 Nov 2003; Aron Griffis <agriffis@gentoo.org> ggv-2.4.0.2.ebuild:
  Stable on ia64

  08 Nov 2003; Todd Sunderlin <todd@gentoo.org> ggv-2.4.0.1.ebuild:
  added sparc keyword

  22 Oct 2003; Bartosch Pixa <darkspecter@gentoo.org> ggv-2.4.0.1.ebuild:
  set ppc in keywords

  17 Oct 2003; Aron Griffis <agriffis@gentoo.org> ggv-2.4.0.2.ebuild:
  Stable on alpha

*ggv-2.4.0.2 (14 Oct 2003)

  14 Oct 2003; Mike Gardiner <obz@gentoo.org> ggv-2.0.0.ebuild,
  ggv-2.0.1.ebuild, ggv-2.4.0.1.ebuild, ggv-2.4.0.2.ebuild:
  New version 2.4.0.2 and fixed up DOC= to DOCS= so we get some docs installed
  into /usr/share/doc

  05 Oct 2003; Mike Gardiner <obz@gentoo.org> ggv-2.4.0.1.ebuild,
  metadata.xml:
  Marked stable on x86

  29 Sep 2003; Aron Griffis <agriffis@gentoo.org> ggv-2.0.1.ebuild:
  Stable on alpha

  23 Sep 2003; Bartosch Pixa <darkspecter@gentoo.org> ggv-2.0.1.ebuild:
  set ppc in keywords

  17 Sep 2003; Jason Wever <weeve@gentoo.org> ggv-2.0.0.ebuild:
  Marked stable for sparc.

*ggv-2.4.0.1 (11 Sep 2003)
