@@ -1,6 +1,9 @@
 # ChangeLog for app-text/gpdf
 # Copyright 2000-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-text/gpdf/ChangeLog,v 1.18 2004/02/10 06:26:21 darkspecter Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-text/gpdf/ChangeLog,v 1.19 2004/02/10 13:43:27 gustavoz Exp $
+
+  10 Feb 2004; <gustavoz@gentoo.org> gpdf-0.112.ebuild:
+  stable on hppa and sparc
 
   10 Feb 2004; Bartosch Pixa <darkspecter@gentoo.org> gpdf-0.112.ebuild:
   set ppc in keywords
