@@ -1,6 +1,9 @@
 # ChangeLog for app-text/scrollkeeper
 # Copyright 2002-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-text/scrollkeeper/ChangeLog,v 1.32 2004/02/10 06:43:34 darkspecter Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-text/scrollkeeper/ChangeLog,v 1.33 2004/02/10 13:40:54 gustavoz Exp $
+
+  10 Feb 2004; <gustavoz@gentoo.org> scrollkeeper-0.3.14.ebuild:
+  stable on hppa and sparc
 
   10 Feb 2004; Bartosch Pixa <darkspecter@gentoo.org>
   scrollkeeper-0.3.14.ebuild:
